searchList 디렉티브 오류 수정: 어트리뷰트를 옵션으로 설정 메뉴모음 생성화면 개발중

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/menuGroups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/menuGroups.html
@@ -12,11 +12,16 @@
 <script type="text/javascript" src="/js/configuration/directives/searchList.js"></script>
 
 <script type="text/javascript" src="/js/configuration/menuGroups/viewController.js"></script>
+<script type="text/javascript" src="/js/configuration/menuGroups/createController.js"></script>
 <script type="text/javascript">
 /*<![CDATA[*/
 angular.module('cinnamon')
 .config(function($stateProvider, $urlRouterProvider) {
-	$stateProvider.state('view', {
+	$stateProvider.state('create', {
+		url: '/configuration/menuGroups/create',
+		templateUrl: '/configuration/partials/menuGroups/create',
+		controller: 'configuration.menuGroups.create'
+	}).state('view', {
 		url: '/configuration/menuGroups/:menuGroupId',
 		templateUrl: '/configuration/partials/menuGroups/view',
 		controller: 'configuration.menuGroups.view'
