--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/view.html
@@ -5,8 +5,8 @@
 		</md-button>
 	</md-fab-trigger>
 	<md-fab-actions>
-		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectMenuGroup($event)">
-			<md-tooltip md-direction="left">메뉴 모음 등록</md-tooltip>
+		<md-button class="md-fab md-accent md-raised md-mini" ng-click="goCreateMenuGroup()">
+			<md-tooltip md-direction="left">메뉴 모음 생성</md-tooltip>
 			<md-icon>apps</md-icon>
 		</md-button>
 	</md-fab-actions>
