--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -74,13 +74,13 @@
 	<!-- style="background: transparent" -->
 	<!-- md-is-locked-open="$mdMedia('gt-lg')" -->
 		<md-sidenav md-component-id="leftSidenav" md-is-locked-open="$mdMedia('gt-sm')" style="width: 230px" ng-style="sidenavStyle">
-			<md-toolbar ng-hide="isHideSidebarToolbar">
+			<!-- <md-toolbar ng-hide="isHideSidebarToolbar">
 				<div class="md-toolbar-tools">
 					<md-button class="md-icon-button" ng-click="closeSidenav()">
 						<md-icon>close</md-icon>
 					</md-button>
 				</div>
-			</md-toolbar>
+			</md-toolbar> -->
 			<md-list>
 				<md-subheader class="content md-no-sticky">{{currentMenus.name}}</md-subheader>
 				<md-list-item ng-repeat="menu in currentMenus.sidebar" ng-click="selectMenu(menu)">
