systemConfigurer에 실행 순서(order) 결정할 수 있도록 수정 default.html의 html tag 에 붙어있던 ng-app="cinnamon"을 각페이지로 옮김 -> 구현 프로젝트에서 다른 이름으로 재정의가 안되서 옮김

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/groups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/groups.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html
+	ng-app="cinnamon"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="configuration/layout/default">
