--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/initWizard.html
@@ -12,7 +12,7 @@
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
 
-<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/cinnamon.js"></script>
 <!-- <script type="text/javascript" src="/js/configuration/initWizard/welcome.js"></script>
 <script type="text/javascript" src="/js/configuration/initWizard/baseData.js"></script>
 <script type="text/javascript" src="/js/configuration/initWizard/firstUser.js"></script> -->
