--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html
-	ng-app="cinnamon"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="configuration/layout/base">
@@ -9,7 +8,7 @@
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
 
-<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/cinnamon.js"></script>
 <script type="text/javascript" src="/js/configuration/layout/layout.js"></script>
 
 
@@ -63,7 +62,7 @@
 				</md-button>
 				<md-menu-content>
 					<md-menu-item>
-						<md-button>설정</md-button>
+						<md-button ng-href="/configuration" target="_self">설정</md-button>
 					</md-menu-item>
 				</md-menu-content>
 			</md-menu>
