--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/login.html
@@ -10,7 +10,7 @@
 <title>로그인</title>
 <link href="/css/cinnamon.css" rel="stylesheet" type="text/css" />
 
-<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/cinnamon.js"></script>
 <script type="text/javascript">
 angular.module('cinnamon');
 </script>
