--- a/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/settings/account.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html
+	ng-app="cinnamon"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="configuration/layout/default">
