--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -23,7 +23,7 @@
 				<a href="/" target="_self">Cinnamon</a>
 			</h2>
 			<!-- <md-button class="md-raised md-accent">스마트랩</md-button> -->
-			<md-menu>
+			<!-- <md-menu>
 				<md-button class="md-raised" ng-click="$mdOpenMenu($event)">
 					프로젝트
 				</md-button>
@@ -32,7 +32,7 @@
 						<md-button>스마트랩</md-button>
 					</md-menu-item>
 				</md-menu-content>
-			</md-menu>
+			</md-menu> -->
 			
 			<span flex=""></span>
 			
