역할 및 권한
 역할 등록 구현
 메뉴별 권한 등록 구현
 역할 및 권한 조회 구현
 기타 테이블 수정

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/list.html
@@ -1,16 +1,15 @@
-
 <md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale" style="position: fixed">
 	<md-fab-trigger>
 		<md-button class="md-fab" ui-sref="create">
-			<md-tooltip md-direction="left">권한 생성</md-tooltip>
+			<md-tooltip md-direction="left">역할 및 권한 생성</md-tooltip>
 			<md-icon>add</md-icon>
 		</md-button>
 	</md-fab-trigger>
 </md-fab-speed-dial>
 
-
 <div class="content-container" ng-controller="configuration.roles.list" ng-cloak="">
-	<h3 layout-padding="" class="md-headline">역할 및 권한</h3>
+
+	<h3 layout-padding="" class="md-headline">역할 및 권한 </h3>
 	
 	<!-- 상세 검색 시작 -->
 	<md-card md-whiteframe="4">
