--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/list.html
@@ -9,7 +9,11 @@
 
 <div class="content-container" ng-controller="configuration.roles.list" ng-cloak="">
 
-	<h3 layout-padding="" class="md-headline">역할 및 권한 </h3>
+	<h3 layout-padding="" class="md-headline">
+		역할 및 권한
+		<span class="md-subhead text-muted">역할 및 권한 목록</span>
+	</h3>
+	
 	
 	<!-- 상세 검색 시작 -->
 	<md-card md-whiteframe="4">
@@ -53,8 +57,8 @@
 	    <md-list>
 	    	  <md-subheader class="md-no-sticky">역할 및 권한 리스트</md-subheader>
 			  <md-list-item ng-repeat="permission in domains.content" ng-click="goView(permission.permissionId)">
-			    <p>{{ permission.name }} </p>
-			    <p>{{ permission.authority }} </p>
+			    <p class="text-muted">{{ permission.name }} </p>
+			    <p class="text-muted">{{ permission.authority }} </p>
 			  </md-list-item>
 	    </md-list>
 	 </md-content>
