--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/modify.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/modify.html
@@ -1,13 +1,13 @@
 
-<div class="content-container" ng-controller="configuration.roles.create">
+<div class="content-container" ng-controller="configuration.roles.modify">
 
 	<h3 layout-padding="" class="md-headline">
 		역할 및 권한
-		<span class="md-subhead text-muted">생성</span>
+		<span class="md-subhead text-muted">수정</span>
 	</h3>
 
 	<md-card md-whiteframe="4">
-		<md-subheader class="md-no-sticky">기본정보입력</md-subheader>
+		<md-subheader class="md-no-sticky">기본정보수정 </md-subheader>
 		<div ng-cloak=""> 
 		  	<md-content>
 		  		<form name="frm" novalidate="novalidate">
@@ -22,7 +22,7 @@
 				      
 				      <md-input-container class="md-block">
 				        <label>Authority</label>
-				        <input required="required" ng-model="role.authority" name="authority" md-maxlength="25"/>
+				        <input required="required" ng-model="role.authority" name="authority" md-maxlength="30"/>
 				        <div ng-messages="frm.authority.$error ">
 				          <div ng-message="required">권한명을 입력하세요.</div>
 				          <div ng-message="md-maxlength">30자 이상 입력하실 수 없습니다.</div>
@@ -36,14 +36,14 @@
 				          <div ng-message="md-maxlength">2000자 이상 입력하실 수 없습니다.</div>
 				        </div>
 				      </md-input-container>
-				      
+
 			    </form>
 			</md-content>
 		</div>
 		
 		<md-card-actions layout="row">
 			<md-button ng-click="goList()">취소</md-button>
-			<md-button class="md-raised md-primary" type="sumbit" ng-click="create()" ng-disabled="!frm.$valid">생성</md-button>
+			<md-button class="md-raised md-primary" type="sumbit" ng-click="modify()" ng-disabled="!frm.$valid">수정</md-button>
 		</md-card-actions>
 	</md-card>
 
