--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
@@ -1,10 +1,23 @@
 
 <div class="content-container" ng-controller="configuration.roles.view">
 
-	<h3 layout-padding="" class="md-headline">역할 및 권한</h3>
+	<h3 layout-padding="" class="md-headline">
+		역할 및 권한
+	</h3>
 
+	
 	<md-card md-whiteframe="4">
-		<md-subheader class="md-no-sticky">기본정보</md-subheader>
+	
+		<md-card-header>
+			<md-card-header-text>
+				<span class="md-title">기본정보</span>
+			</md-card-header-text>
+			<md-button class="md-icon-button" ui-sref="modify({permissionId: domains.permissionId})">
+				<md-tooltip>기본 정보 수정</md-tooltip>
+				<md-icon>edit</md-icon>
+			</md-button>
+		</md-card-header>
+		
 		<div ng-cloak="">
 		  	<md-content>
 			    <md-list>
