--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
@@ -61,6 +61,7 @@
 			  	    			<md-icon>settings</md-icon> {{menuGroup.name}}
 			  	    		</p>
 			  	    	</div>
+			  	    	<md-divider ng-if="!$last"></md-divider>
 					</md-list-item>
 			</md-list>
 
