--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/sites/list.html
@@ -21,7 +21,9 @@
 			sort-items="{
 				siteId: 'siteId',
 				name: '이름'
-			}">
+			}"
+			search-info="searchInfo"
+			>
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
