--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/userGroups/list.html
@@ -19,7 +19,9 @@
 				userGroupId: 'userGroupId',
 				name: '이름',
 				authority: '권한'
-			}">
+			}"
+			search-info="searchInfo"
+			>
 			
 			<cm-search-list-filters>
 				<md-card-content class="content" layout="column">
