이메일 서버 등록,수정,삭제 기능 추가
  EmailServer domain 수정
  username 및
  password nullable 삭제
  
  but 
  메일 테스트 시에 등록된 사용자 정보로 해서 메일 발송 테스트를 작성하기 때문에
  
  smtp 서버 정보를 말하는건지 확인 要

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/email.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/email.html
@@ -18,6 +18,9 @@
 	
 <script type="text/javascript" src="/js/configuration/directives/searchList.js"></script>
 <script type="text/javascript" src="/js/configuration/email/listController.js"></script>
+<script type="text/javascript" src="/js/configuration/email/viewController.js"></script>
+<script type="text/javascript" src="/js/configuration/email/modifyController.js"></script>
+<script type="text/javascript" src="/js/configuration/email/createController.js"></script>
 
 <script type="text/javascript">
 /*<![CDATA[*/
@@ -27,11 +30,23 @@ angular.module('cinnamon')
 		url: '/configuration/email',
 		templateUrl: '/configuration/partials/email/list',
 		controller: 'configuration.email.list'
-	}).state('view', {
-		url: '/configuration/email/server/:emailId',
+	})
+	.state('create', {
+		url: '/configuration/email/server/create',
+		templateUrl: '/configuration/partials/email/create',
+		controller: 'configuration.email.server.create'
+	})	
+	.state('view', {
+		url: '/configuration/email/server/:emailServerId',
 		templateUrl: '/configuration/partials/email/view',
-		controller: 'configuration.email.view'
-	});
+		controller: 'configuration.email.server.view'
+	})
+	.state('modify', {
+		url : '/configuration/email/server/modify/:emailServerId',
+		templateUrl : '/configuration/partials/email/modify',
+		controller : 'configuration.email.server.modify'
+	})
+	;
 	
 });
 /*]]>*/
