--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/create.html
@@ -6,7 +6,7 @@
 		<span class="md-subhead text-muted">생성</span>
 	</h3>
 
-	<md-card md-whiteframe="4">
+	<md-card md-whiteframe="4" layout-padding="">
 		<md-subheader class="md-no-sticky">기본정보입력</md-subheader>
 		<div ng-cloak=""> 
 		  	<md-content>
