--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/permission.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/permission.html
@@ -3,7 +3,7 @@
 
 	<h3 layout-padding="" class="md-headline">역할 및 권한</h3>
 
-	<md-card md-whiteframe="4">
+	<md-card md-whiteframe="4" layout-padding="">
 		<md-subheader class="md-no-sticky">기본정보</md-subheader>
 		<div ng-cloak="">
 		  	<md-content>
@@ -25,7 +25,7 @@
 		</div>
 	</md-card>
 	
-	<md-card md-whiteframe="4">
+	<md-card md-whiteframe="4" layout-padding="">
 	
 		<md-content>
 		<h3 layout-padding="" class="md-headline"> {{sites.name}} 사이트 메뉴 권한</h3>
