--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
@@ -4,9 +4,8 @@
 	<h3 layout-padding="" class="md-headline">
 		역할 및 권한
 	</h3>
-
 	
-	<md-card md-whiteframe="4">
+	<md-card md-whiteframe="4" layout-padding="">
 	
 		<md-card-header>
 			<md-card-header-text>
