--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
@@ -18,21 +18,25 @@
 		</md-card-header>
 		
 		<div ng-cloak="">
-		  	<md-content>
-			    <md-list>
-			    	<md-list-item >
-			       		<p><strong>PermissionId</strong></p>
-			          	<p>{{ domains.permissionId }}</p>
-				     </md-list-item>
-				     <md-list-item >
-			       		<p><strong>Authority</strong></p>
-			          	<p>{{ domains.authority }}</p>
-				     </md-list-item>
-				     <md-list-item>
-			       		<p><strong>이름</strong></p>
-			          	<p>{{ domains.name }}</p>
-			    	</md-list-item>
-			    </md-list>
+			<md-content>
+				<md-list>
+					<md-list-item >
+				 		<p><strong>PermissionId</strong></p>
+						<p>{{ domains.permissionId }}</p>
+					 </md-list-item>
+					 <md-list-item >
+				 		<p><strong>Authority</strong></p>
+						<p>{{ domains.authority }}</p>
+					 </md-list-item>
+					 <md-list-item>
+				 		<p><strong>이름</strong></p>
+						<p>{{ domains.name }}</p>
+					</md-list-item>
+					 <md-list-item>
+				 		<p><strong>설명</strong></p>
+						<p>{{ domains.description }}</p>
+					</md-list-item>
+				</md-list>
 			</md-content>
 		</div>
 	</md-card>
@@ -40,31 +44,31 @@
 	<md-card md-whiteframe="4">
 		<h3 layout-padding="" class="md-headline">사이트별 역할 권한</h3>
 		
-    	<md-content>
-		    <md-list ng-show="menuGroups == null">
-	    	  <md-subheader class="md-no-sticky">사이트</md-subheader>
-				  <md-list-item ng-repeat="site in sites" ng-click="selectSite(site.siteId)">
-				  	<div layout="column" style="width:100%;">
-				  		<p>
-				  			<md-icon>list</md-icon> {{site.name}}
-				  		</p>
-				  	</div>
-				  </md-list-item>
-		    </md-list>
-		    
+		<md-content>
+			<md-list ng-show="menuGroups == null">
+			<md-subheader class="md-no-sticky">사이트</md-subheader>
+				<md-list-item ng-repeat="site in sites" ng-click="selectSite(site.siteId)">
+					<div layout="column" style="width:100%;">
+						<p>
+							<md-icon>list</md-icon> {{site.name}}
+						</p>
+					</div>
+				</md-list-item>
+			</md-list>
+			
 			<md-list ng-if="menuGroups.length &gt; 0" >
 				<md-subheader class="md-primary">메뉴그룹</md-subheader>
-			  	    <md-list-item ng-repeat="menuGroup in menuGroups" ng-click="goPermission(menuGroup.menuGroupId);">
-			  	    	<div layout="column" style="width:100%;">
-			  	    		<p>
-			  	    			<md-icon>settings</md-icon> {{menuGroup.name}}
-			  	    		</p>
-			  	    	</div>
-			  	    	<md-divider ng-if="!$last"></md-divider>
+					<md-list-item ng-repeat="menuGroup in menuGroups" ng-click="goPermission(menuGroup.menuGroupId);">
+						<div layout="column" style="width:100%;">
+							<p>
+								<md-icon>settings</md-icon> {{menuGroup.name}}
+							</p>
+						</div>
+						<md-divider ng-if="!$last"></md-divider>
 					</md-list-item>
 			</md-list>
 
-  		</md-content>
+		</md-content>
 
 </md-card>
 
