세션을 통해서 개인 정보를 전달하는 api 추가 웹사이트 해더에 동적 메뉴 구성할 수 있도록 수정 angular-material 버전업(1.0.6)

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -34,6 +34,11 @@
 				</md-menu-content>
 			</md-menu> -->
 			
+			<md-button class="md-raised" ng-repeat="menu in currentMenus.headerLeft" ng-href="{{menu.uri}}" target="_self">
+				{{menu.name}}
+			</md-button>
+			
+			
 			<span flex=""></span>
 			
 			<md-button class="md-icon-button">
