searchList디렉티브에 pager 추가, 로딩중 프로그레스 추가 사이드 메뉴 개선중 사용자 추가 페이지를 팝업으로 변경

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/layout/default.html
@@ -14,9 +14,9 @@
 
 </head>
 <body layout:fragment="body" class="content" layout="column" ng-controller="layoutController">
-	<md-toolbar md-whiteframe="5">
+	<md-toolbar md-whiteframe="5" layout-align="center center">
 		<div class="md-toolbar-tools" layout-fill="">
-			<md-button class="md-icon-button" ng-click="toggleSidenav()" ng-show="showMenuButton()">
+			<md-button class="md-icon-button" ng-click="toggleSidenav()">
 				<md-icon>menu</md-icon>
 			</md-button>
 			<h2>
@@ -74,17 +74,44 @@
 		</div>
 		
 	</md-toolbar>
+	
+	<md-sidenav md-component-id="leftSidenav">
+		<md-toolbar>
+			<div class="md-toolbar-tools">
+				<md-button class="md-icon-button" ng-click="closeSidenav()">
+					<md-icon>arrow_back</md-icon>
+				</md-button>
+				<h2>Cinnamon</h2>
+			</div>
+		</md-toolbar>
+		<md-subheader>{{currentMenus.name}}</md-subheader>
+		<md-list>
+			<md-list-item ng-repeat="menu in currentMenus.sidebar" ng-click="selectMenu(menu)">
+				<div flex="15">
+					<md-icon>{{menu.iconClass}}</md-icon>
+				</div>
+				{{menu.name}}
+			</md-list-item>
+			<md-list ng-if="menu.childs != 0">
+				<md-list-item ng-repeat="childMenu in menu.childs" ng-click="selectMenu(childMenu)">
+					{{childMenu.name}}
+				</md-list-item>
+			</md-list>
+			
+		</md-list>
+		
+	</md-sidenav>
+	
+	
+	
+	
+	
+	
+	
 	<md-content layout="row" flex="" class="content">
 	<!-- style="background: transparent" -->
 	<!-- md-is-locked-open="$mdMedia('gt-lg')" -->
-		<md-sidenav md-component-id="leftSidenav" md-is-locked-open="$mdMedia('gt-sm')" style="width: 230px" ng-style="sidenavStyle">
-			<!-- <md-toolbar ng-hide="isHideSidebarToolbar">
-				<div class="md-toolbar-tools">
-					<md-button class="md-icon-button" ng-click="closeSidenav()">
-						<md-icon>close</md-icon>
-					</md-button>
-				</div>
-			</md-toolbar> -->
+		<!-- <md-sidenav md-component-id="leftSidenav" md-is-locked-open="$mdMedia('gt-sm')" style="width: 230px" ng-style="sidenavStyle">
 			<md-list>
 				<md-subheader class="content md-no-sticky">{{currentMenus.name}}</md-subheader>
 				<md-list-item ng-repeat="menu in currentMenus.sidebar" ng-click="selectMenu(menu)">
@@ -101,7 +128,7 @@
 				
 			</md-list>
 			
-		</md-sidenav>
+		</md-sidenav> -->
 		<div flex="">
 			<div layout:fragment="content"></div>
 		</div>
