--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -1,23 +1,25 @@
-<div class="content-container">
-	<md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale" style="position: fixed">
-		<md-fab-trigger>
-			<md-button class="md-fab md-accent">
-				<md-icon>edit</md-icon>
-			</md-button>
-		</md-fab-trigger>
-		<md-fab-actions>
-			<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
-				<md-tooltip md-direction="left">사용자 모임에 등록</md-tooltip>
-				<md-icon>group</md-icon>
-			</md-button>
-		</md-fab-actions>
-	</md-fab-speed-dial>
+<md-fab-speed-dial md-open="fabOpen" md-direction="up" class="md-fab-bottom-right md-scale" style="position: fixed">
+	<md-fab-trigger>
+		<md-button class="md-fab md-accent">
+			<md-icon>edit</md-icon>
+		</md-button>
+	</md-fab-trigger>
+	<md-fab-actions>
+		<md-button class="md-fab md-accent md-raised md-mini" ng-click="selectUserGroup($event)">
+			<md-tooltip md-direction="left">사용자 모임에 등록</md-tooltip>
+			<md-icon>group</md-icon>
+		</md-button>
+	</md-fab-actions>
+</md-fab-speed-dial>
 
+<div class="content-container">
+	<h3 layout-padding="" class="md-headline">사용자</h3>
+	
 	<md-card>
 		<md-card-title>
 			<md-card-title-text>
-				<span class="md-headline">{{domain.name}}</span>
-				<span class="md-subhead">{{domain.nation}} {{domain.language}}</span>
+				<span class="md-title">기본정보</span>
+				<!-- <span class="md-subhead">{{domain.nation}} {{domain.language}}</span> -->
 			</md-card-title-text>
 			<md-button class="md-icon-button" ui-sref="modify({userId: domain.userId})">
 				<md-tooltip>기본 정보 수정</md-tooltip>
@@ -26,28 +28,40 @@
 		</md-card-title>
 		
 		<md-card-content>
-			<table>
-				<tr layout-padding="">
+			<table class="table table-hover">
+				<tr>
+					<th class="text-muted">userId</th>
+					<td>{{domain.userId}}</td>
+				</tr>
+				<tr>
+					<th class="text-muted">이름</th>
+					<td>{{domain.name}}</td>
+				</tr>
+				<tr>
 					<th class="text-muted">이메일</th>
 					<td>{{domain.email}}</td>
 				</tr>
-				<tr layout-padding="">
+				<tr>
 					<th class="text-muted">거주지</th>
 					<td>{{domain.location}}</td>
 				</tr>
-				<tr layout-padding="">
+				<tr>
 					<th class="text-muted">직업</th>
 					<td>{{domain.job}}</td>
 				</tr>
-				<tr layout-padding="">
+				<tr>
 					<th class="text-muted">전화</th>
 					<td>{{domain.tel}}</td>
 				</tr>
-				<tr layout-padding="">
+				<tr>
+					<th class="text-muted">국가</th>
+					<td>{{domain.nation}}</td>
+				</tr>
+				<tr>
 					<th class="text-muted">핸드폰</th>
 					<td>{{domain.phone}}</td>
 				</tr>
-				<tr layout-padding="">
+				<tr>
 					<th class="text-muted">가입일</th>
 					<td>
 						<small class="text-muted">{{domain.createdAt | date: 'yyyy년 MM월 dd일 HH:mm:ss'}}</small>
@@ -63,7 +77,7 @@
 	<md-card>
 		<md-card-header>
 			<md-card-header-text layout="row">
-				<span class="md-title">모임</span>
+				<span class="md-title">사용자 모임</span>
 			</md-card-header-text>
 		</md-card-header>
 		
