searchList 디렉티브: 모바일에서는 pager만 보이게 데스크탑에서는 pagination만 보이도록 수정
사이드 메뉴: 모바일에서는 팝업형태의 사이드바 toggle가능하게
데스크탑에서는 고정되게 보이도록 수정

해더: 로그인한 사용자의 이름이 보이도록 수정

spring-boot 버전은 1.3.1 -> 1.3.3 버전으로 버전업

--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/directives/searchList.html
@@ -50,6 +50,7 @@
 	<!-- 페이징 -->
 	<div ng-if="isPaging != false">
 		<uib-pagination
+			ng-if="!isMobile()"
 			layout-margin=""
 			template-url="/configuration/partials/directive/pagination"
 			total-items="domains.totalElements"
@@ -59,6 +60,7 @@
 			ng-change="onPageChange()" />
 		
 		<uib-pager
+			ng-if="isMobile()"
 			layout-margin=""
 			template-url="/configuration/partials/directive/pager"
 			total-items="domains.totalElements"
