--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/create.html
@@ -1,17 +1,22 @@
-<md-dialog ng-clock="" flex="70">
-	<md-toolbar>
+<md-dialog ng-clock="" flex="50">
+	<md-toolbar ng-if="isMobile()">
 		<div class="md-toolbar-tools">
 			<md-button class="md-icon-button" ng-click="close()">
 				<md-icon>arrow_back</md-icon>
 			</md-button>
 			<h2 class="md-title">사용자 생성</h2>
-			<!-- <span flex=""></span>
-			<md-button class="md-icon-button" ng-click="close()">
+			<span flex=""></span>
+			<!-- <md-button class="md-icon-button" ng-click="close()">
 				<md-icon>close</md-icon>
 			</md-button> -->
+			
+			<span flex=""></span>
+			<md-button class="md-raised">생성</md-button>
+			
 		</div>
 	</md-toolbar>
 	<md-dialog-content layout-padding="">
+		<h2 class="md-title">사용자 정보</h2>
 		<form name="form" novalidate="novalidate">
 			<md-input-container class="md-block">
 				<label>userId</label>
@@ -54,7 +59,8 @@
 			</md-input-container>
 		</form>
 	</md-dialog-content>
-	<md-dialog-actions layout="row">
+	<md-dialog-actions layout="row" ng-if="!isMobile()">
+		<md-button ng-click="close()">취소</md-button>
 		<md-button class="md-raised md-primary" ng-click="create(form, $event)">생성</md-button>
 	</md-dialog-actions>
 	
