--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/roles/view.html
@@ -21,20 +21,36 @@
 			<md-content>
 				<md-list>
 					<md-list-item >
-				 		<p><strong>PermissionId</strong></p>
-						<p>{{ domains.permissionId }}</p>
+				 		<p>
+				 			<strong>PermissionId</strong>
+				 		</p>
+						<p>
+							{{ domains.permissionId }}
+						</p>
 					 </md-list-item>
 					 <md-list-item >
-				 		<p><strong>Authority</strong></p>
-						<p>{{ domains.authority }}</p>
+				 		<p>
+				 			<strong>Authority</strong>
+				 		</p>
+						<p>
+							{{ domains.authority }}
+						</p>
 					 </md-list-item>
 					 <md-list-item>
-				 		<p><strong>이름</strong></p>
-						<p>{{ domains.name }}</p>
+				 		<p>
+				 			<strong>이름</strong>
+				 		</p>
+						<p>
+							{{ domains.name }}
+						</p>
 					</md-list-item>
 					 <md-list-item>
-				 		<p><strong>설명</strong></p>
-						<p>{{ domains.description }}</p>
+				 		<p>
+				 			<strong>설명</strong>
+				 		</p>
+						<p>
+							{{domains.description}}
+						</p>
 					</md-list-item>
 				</md-list>
 			</md-content>
