--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/groups.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/groups.html
@@ -26,13 +26,11 @@ angular.module('cinnamon')
 		templateUrl: '/configuration/partials/groups/list',
 		controller: 'configuration.group.list'
 	})
-	/*
 	.state('create',{
 		url : '/configuration/groups/create',
 		templateUrl : '/configuration/partials/groups/create',
 		controller : 'configuration.group.create'
 	})
-	*/
 	.state('view', {
 		url: '/configuration/groups/:groupId',
 		templateUrl: '/configuration/partials/groups/view',
@@ -42,13 +40,16 @@ angular.module('cinnamon')
 		url: '/configuration/groups/modify/:groupId',
 		templateUrl: '/configuration/partials/groups/modify',
 		controller: 'configuration.group.modify'
-	});	
+	});
 });
 //]]>
 </script>
 <script src="/js/configuration/directives/searchList.js" type="text/javascript"></script>
 <script src="/js/configuration/groups/listController.js" type="text/javascript"></script>
 <script src="/js/configuration/groups/viewController.js" type="text/javascript"></script>
+<script src="/js/configuration/groups/createController.js" type="text/javascript"></script>
+<script src="/js/configuration/groups/modifyController.js" type="text/javascript"></script>
+
 </body>
 
 </html>
