--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/createChild.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/createChild.html
@@ -43,7 +43,7 @@
 				
 			</md-list>
 			
-			<md-button ng-click="close()">취소</md-button>
+			<!-- <md-button ng-click="close()">취소</md-button>  -->
 			<md-button class="md-raised md-primary" type="sumbit" ng-click="createChild(group)" ng-disabled="!frm.$valid">등록</md-button>
 		</md-dialog-content>
 	</form>
