--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/groups/view.html
@@ -60,10 +60,12 @@
 			<md-card-header-text>
 				<span class="md-title">하위코드</span>
 			</md-card-header-text>
+			<!-- 
 			<md-button class="md-icon-button" ng-click="popupCreateChild($event)">
 				<md-tooltip>하위코드 등록</md-tooltip>
 				<md-icon>add</md-icon>
 			</md-button>
+			 -->
 		</md-card-header>
 		
 		<div ng-cloak="">
@@ -82,8 +84,26 @@
 					</md-list-item>
 				</md-list>
 			</md-content>
+			
+			<md-button class="md-raised" ng-click="goList()">
+				목록
+			</md-button>
 		</div>
 	</md-card>
 
+	<md-fab-speed-dial md-open="fabOpen" class="md-fab-bottom-right md-scale" style="position: fixed" md-direction="up">
+		<md-fab-trigger>
+			<md-button class="md-fab">
+				<md-tooltip md-direction="left">메뉴</md-tooltip>
+				<md-icon>mode_edit</md-icon>
+			</md-button>
+		</md-fab-trigger>
+		<md-fab-actions>
+			<md-button class="md-fab md-raised md-mini" ng-click="popupCreateChild($event)">
+				<md-tooltip md-direction="left">하위 코드 등록</md-tooltip>
+				<md-icon>add</md-icon>
+			</md-button>
+		</md-fab-actions>
+	</md-fab-speed-dial>
 
 </div>
