--- a/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
+++ b/cinnamon-core-web-material/src/main/resources/templates/configuration/partials/users/view.html
@@ -25,6 +25,9 @@
 				<md-tooltip>기본 정보 수정</md-tooltip>
 				<md-icon>edit</md-icon>
 			</md-button>
+			<md-button class="md-icon-button">
+				<md-icon>more_vert</md-icon>
+			</md-button>
 		</md-card-title>
 		
 		<md-card-content>
